@@ -607,6 +607,7 @@ All (GUI):
 - Fix wrong tab order in wxAuiNotebook after dragging (Mark Barber).
 - Fix bug in generic wxDataViewCtrl column dragging (jobuz).
 - Add wxMask::GetBitmap() for wxMSW, wxGTK and wxOSX
+- Add wxCheckListBox::GetCheckedItems() (hartwigw).
 
 wxGTK:
 
